appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebook.react.uiapp
---
- launchApp
- stopApp
- openLink: rntester://example/Animated/fadeInView
- runFlow: ./helpers/confirm-open-link.yml
- extendedWaitUntil:
    visible:
      id: 'toggle-button'
    timeout: 120000
- assertVisible:
    id: 'fade-in-view'
- tapOn:
    id: 'toggle-button'
- assertNotVisible:
    id: 'fade-in-view'
- tapOn:
    id: 'toggle-button'
- assertVisible:
    id: 'fade-in-view'
